--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -40,7 +40,7 @@
     background: linear_gradient(#ffe788, #ffce38);
     border-radius: 2px;
     box-shadow: inset 0px 1px 0px rgba(255,255,255,0.4), 0px 1px 1px rgba(0,0,0,0.1);
-    background-color: #FFE788;
+    background-color: #26ab43;
     margin-left: 5px;
     padding: 10px 12px;
     margin-top: 6px;
