--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -29,6 +29,10 @@
     background-color: #26ab43;
 }
 
+#banner .downloads span {
+    color: #000;
+}
+
 /////////////////////////////////////////////////
 // BODY ARTICLE
 /////////////////////////////////////////////////
