--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -38,7 +38,7 @@
 /////////////////////////////////////////////////
 
 section {
-    width: 800px;
+    //width: 800px;
     padding: 30px 30px 50px 30px;
     margin: 20px 0;
     margin-top: 190px;
@@ -52,14 +52,14 @@ section {
 /////////////////////////////////////////////////
 // NAV
 /////////////////////////////////////////////////
-nav {
-    margin-left: -650px;
-}
+//nav {
+//    margin-left: -650px;
+//}
 
 /////////////////////////////////////////////////
 // Footer
 /////////////////////////////////////////////////
-footer {
-    margin-left: -600px;
-}
+//footer {
+//    margin-left: -600px;
+//}
 
