--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -20,8 +20,6 @@
 
 #banner .button {
     border: 1px solid #19722d;
-    background: linear_gradient(#ffe788, #ffce38);
-    box-shadow: inset 0px 1px 0px rgba(255,255,255,0.4), 0px 1px 1px rgba(0,0,0,0.1);
     background-color: #26ab43;
 }
 
@@ -38,7 +36,7 @@
 /////////////////////////////////////////////////
 
 section {
-    //width: 800px;
+    width: 800px;
 }
 
 /////////////////////////////////////////////////
