--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -42,14 +42,14 @@ section {
 /////////////////////////////////////////////////
 // NAV
 /////////////////////////////////////////////////
-//nav {
-//    margin-left: -650px;
-//}
+nav {
+    margin-left: -650px;
+}
 
 /////////////////////////////////////////////////
 // Footer
 /////////////////////////////////////////////////
-//footer {
-//    margin-left: -600px;
-//}
+footer {
+    margin-left: -600px;
+}
 
