--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -43,13 +43,13 @@ section {
 // NAV
 /////////////////////////////////////////////////
 nav {
-    margin-left: -650px;
+    //margin-left: -650px;
 }
 
 /////////////////////////////////////////////////
 // Footer
 /////////////////////////////////////////////////
 footer {
-    margin-left: -600px;
+    //margin-left: -600px;
 }
 
