--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -32,6 +32,10 @@
     color: #000;
 }
 
+header {
+    background: #114c1e;
+}
+
 /////////////////////////////////////////////////
 // BODY ARTICLE
 /////////////////////////////////////////////////
