--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -40,9 +40,9 @@
 // BODY ARTICLE
 /////////////////////////////////////////////////
 
-section {
-    width: 800px;
-}
+//section {
+//    width: 800px;
+//}
 
 /////////////////////////////////////////////////
 // NAV
