--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -32,9 +32,9 @@
     color: #000;
 }
 
-//header {
-//    background: #114c1e;
-//}
+header {
+    background: #114c1e;
+}
 
 /////////////////////////////////////////////////
 // BODY ARTICLE
