--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -40,6 +40,11 @@ header {
 // BODY ARTICLE
 /////////////////////////////////////////////////
 
+hr {
+    height: 3px;
+    background: center center repeat-x #114c1e;
+}
+
 //section {
 //    width: 800px;
 //}
