--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -5,8 +5,11 @@ show_title: false
 ---
 <div class="layout--404">
   <div class="sign">
-    <h1>404</h1>
-    <p>Page not found :(</p>
+    <hr/>
+    <center><h1>- 404 -</h1></center>
+    <hr/>
+    <p>Maaf! Halaman Tidak ditemukan :(</p>
+    Kembali ke <a href="/">Beranda</a>
   </div>
 </div>
 
