--- a/_includes/article-info.html
+++ b/_includes/article-info.html
@@ -74,6 +74,12 @@
               <li><i class="far fa-eye"></i> <span class="js-pageview" data-page-key="{{ include.article.key }}">0</span> {{ _locale_views }}</li>
             {%- endif -%}
           {%- endif -%}
+
+          <li>
+            <a href="https://hits.seeyoufarm.com">
+              <i class="far fa-eye"></i> <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https://centragro.org/{{ page.date }}{{ page.title }}&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=views&edge_flat=false"/>
+            </a>
+          </li>
         </ul>
       {%- endif -%}
 
