--- a/_includes/article-info.html
+++ b/_includes/article-info.html
@@ -77,7 +77,7 @@
 
           <li>
             <a href="https://hits.seeyoufarm.com">
-              <i class="far fa-eye"></i> <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https://centragro.org/{{ page.date }}{{ page.title }}&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=views&edge_flat=false"/>
+              <i class="far fa-eye"></i> <span><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https://centragro.org/{{ page.date }}{{ page.title }}&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=views&edge_flat=false"/> </span>
             </a>
           </li>
         </ul>
