--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -17,6 +17,10 @@ type: article
     <section class="article__sharing d-print-none">{%- include sharing.html -%}</section>
   {%- endif -%}
 
+  <div>
+    <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https://centragro.org/{{ page.date }}{{ page.title }}&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=views&edge_flat=false"/> 
+  </div>
+
   {% if page.comments %}
   <div id="disqus_thread"></div>
   <script>
