--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -12,7 +12,7 @@ type: article
   {%- include article/top/custom.html -%}
 
   <div>
-    <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https://centragro.org/{{ page.date }}{{ page.title }}&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=views&edge_flat=false"/> 
+    <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https://centragro.org/{{ page.tanggal }}{{ page.title }}&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=views&edge_flat=false"/> 
   </div>
 
   <div class="article__content" itemprop="articleBody">{{ content }}</div>
